--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,330 @@
-/* styles.css */
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0px;
+}
 
-/* Reset default margin and padding for body */
+#top-header {
+  display: flex;
+  width: 100%;
+  background-color: black;
+  border-bottom: 5px solid rgb(170, 1, 1);
+  box-shadow: 0px 5px 10px rgb(45, 44, 44);
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  margin-top: -20px;
+}
+
+.header-left-column {
+  display: flex;
+  flex: 1.1; /* Flex the left column to take available space */
+  flex-direction: column; /* Stack elements vertically inside the right column */
+  margin: 0px;
+  color: rgb(255, 251, 246);
+  background: black;
+  text-align: center;
+  font-size: x-large;
+  padding: 20px;
+}
+
+.header-right-column {
+  display: flex; /* Enable flexbox for the right column */
+  flex: 2; /* Flex the right column to take available space */
+  flex-direction: column; /* Stack elements vertically inside the right column */
+  margin: 0px;
+  color: rgb(255, 251, 246);
+  background-color: black;
+  text-align: left;
+  padding: 20px;
+}
+
+.contact {
+  border-left: 2px solid #fff;
+  padding-left: 45px;
+}
+
+#name {
+  margin: 5px;
+  font-size: 40px;
+}
+
+/* Add CSS for the portfolio list container */
+.portfolio-list {
+  position: relative;
+}
+
+/* Hide the portfolio titles by default */
+.portfolio-titles {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  margin-left: 10px;
+  background-color: white;
+  border: 1px solid #6d6d6d;
+  border-radius: 5px;
+  padding: 10px 15px;
+  width: auto;
+  z-index: 2;
+  white-space: nowrap;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #333;
+  transition: opacity 0.3s, visibility 0s 0.3s; /* Add transitions for smooth visibility change */
+}
+
+/* Show the portfolio titles when hovering over .portfolio-list */
+.portfolio-list:hover .portfolio-titles {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s; /* Remove the delay on hover to show immediately */
+}
+
+/* Position the portfolio titles between "Profile" and "LinkedIn" */
+.portfolio-titles {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* Position portfolio titles vertically */
+.portfolio-titles li {
+  padding: 5px; /* Add some spacing between portfolio items */
+}
+
+#portfolio {
+  margin: 5px;
+}
+
+a {
+  color: rgb(31, 136, 207);
+  margin-right: 3px;
+}
+
+a:hover {
+  color: rgb(0, 157, 255);
+}
+
+/* Add CSS for the navbar */
+#navbar {
+  background-color: #333; /* Set your preferred background color for the navbar */
+  padding: 10px;
+  position: fixed;
+}
+
+#navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#navbar li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+#navbar a {
+  text-decoration: none;
+  color: #fff; /* Set your preferred text color for the navbar links */
+  font-size: 16px;
+}
+
+#navbar a:hover {
+  color: #ff0000; /* Set your preferred hover text color for the navbar links */
+}
+
+/* Add CSS for the navbar */
+.nav-container {
+  position: fixed;
+  top: 155px; /* Adjust the top position to place the navbar below the header */
+  left: 0;
+  width: 100%;
+  height: auto;
+  background-color: #333;
+  padding: 10px;
+  z-index: 2; /* Ensure the navbar appears above the content */
+}
+
+ol {
+  margin: auto;
+  padding: 0;
+}
+
+av {
+  margin: 0 auto;
+  width: fit-content;
+  text-align: center;
+  color: black;
+  position: absolute;
+  top: 120px;
+  left: 450px;
+}
+
+a:link {
+  color: solid rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+#profile-container {
+  display: flex; /* Enable flexbox to create two columns */
+  justify-content: space-between; /* Distribute columns evenly across the container */
+  margin-top: 165px;
+}
+
+#profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#profile img {
+  border-radius: 50%;
+  border: 5px solid rgb(135, 1, 1);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
+  width: 65%;
+}
+
+.profile-left-column {
+  flex: 1; /* Take up 1/3 of the container */
+  padding: 20px;
+  display: flex;
+  justify-content: center; /* Center items horizontally */
+  align-items: center; /* Center items vertically */
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.profile-right-column {
+  flex: 2;
+  padding: 20px;
+  display: flex; /* Enable flexbox for the right column */
+  flex-direction: column; /* Stack elements vertically inside the right column */
+  justify-content: center; /* Center items horizontally */
+}
+
+#profile-header {
+  color: rgb(33, 29, 29);
+  padding: 2px 2px 2px 2px;
+  font-size: 20px;
+  margin: 0px 0px 0px 50px;
+}
+
+h1, h3 {
+  margin: 2px;
+}
+
+#profile-list {
+  padding-left: 20px;
+  border-left: 5px solid rgb(170, 1, 1);
+  line-height: 40px;
+  font-size: 18px;
+  display: flex; /* Enable flexbox for the profile list */
+  flex-direction: column; /* Stack list items vertically */
+  align-items: flex-start; /* Align list items to the top */
+}
+
+.container {
+  max-width: auto; /* Adjust the max-width as needed */
+  margin: 0 auto;
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 20px; /* Add some space between each row */
+}
+
+.portfolio-row {
+  display: flex;
+  align-items: center;
+}
+
+.portfolio-left-column {
+  flex: 2; /* Take up 2/3 of the row width */
+  margin-right: -80px;
+}
+
+.portfolio-right-column {
+  flex: 1; /* Take up 1/3 of the row width */
+}
+
+.portfolio-left-column img {
+  max-width: auto; /* Ensure the image doesn't exceed its column width */
+}
+
+.portfolio-right-column h1 {
+  margin-top: 0; /* Remove default top margin for the heading */
+}
+
+.portfolio-right-column ul {
+  padding: 0;
+  margin: 0; /* Remove default margin for the ul element */
+  list-style-type: disc; /* Add bullet points to the list */
+  line-height: 2;
+}
+
+#weblink {
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+  color: rgb(170, 1, 1); /* Set the initial color of the text (optional) */
+}
+
+#weblink:hover {
+  color: rgb(208, 128, 0); /* Set the highlight color to red on hover */
+}
+
+#bootcamp-practice,
+#password-generator,
+#weather-dashboard,
+#movie-reviews,
+#bookshare {
+  Padding: 20px;
+  background-color: rgb(224, 224, 224);
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px;
+  margin: 70px 50px 50px 50px;
+  scroll-margin-top: 300px;
+}
+
+#bookshare {
+  margin-bottom: 100px;
+}
+.bootcamp-practice,
+.password-generator,
+.weather-dashboard,
+.movie-reviews,
+.bookshare  {
+  position: static;
+  border-right: 5px solid rgb(170, 1, 1);
+  width: 750px;
+  height: 200px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px#333;
+}
+
+#footer-position {
+  display: flex;
+  position: fixed;
+  bottom: -5px;
+}
+
+.footer-text {
+  color: rgb(0, 0, 0);
+  position: absolute;
+  bottom: 1px;
+  left: 600px;
+  text-align: center;
+  line-height: 10px;
+}
+
+.footer-style {
+  width: 100%;
+  border-top: 5px solid rgb(170, 1, 1);
+}
 body {
      margin: 0;
      padding: 0;
