--- a/src/styles.css
+++ b/src/styles.css
@@ -3,14 +3,28 @@ body {
   margin: 0px;
 }
 
-/* Add the styles to center the name */
+/* Header */
+header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  background-color: black;
+  border-bottom: 5px solid rgb(170, 1, 1);
+  box-shadow: 0px 5px 10px rgb(45, 44, 44);
+  align-items: center;
+  color: rgb(255, 251, 246);
+  padding: 10px;
+}
+
 header .flex-container {
   display: flex;
   justify-content: center;
   margin: 10px 0px 10px 0px;
+  font-size: 25px;
 }
 
-/* Add the styles for the navigation items */
 header ul {
   display: flex;
   justify-content: center;
@@ -28,67 +42,67 @@ header a {
   text-decoration: none;
 }
 
-header a:hover {
+header a:hover,
+header a:focus {
   color: rgb(170, 1, 1);
   filter: brightness(1.2);
 }
 
-#navbar ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+header a.portfolio-link.clicked {
+  color: rgb(170, 1, 1);
+  filter: brightness(1.2);
 }
 
-#navbar li {
-  display: inline-block;
-  margin-right: 20px;
+/* Profile */
+#profile-container {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #ffe8e8;
+  padding-bottom: 70px;
 }
 
-#navbar a {
-  text-decoration: none;
-  color: #fff; /* Set your preferred text color for the navbar links */
-  font-size: 16px;
+#profile {
+  align-items: center;
+  justify-content: center;
 }
 
-#navbar a:hover {
-  color: #ff0000; /* Set your preferred hover text color for the navbar links */
+.profile {
+  margin-top: 170px;
 }
 
-/* Add CSS for the navbar */
-.nav-container {
+#profile img {
+  border-radius: 50%;
+  border: 5px solid rgb(135, 1, 1);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
   width: 100%;
-  height: auto;
-  padding: 5px;
-  z-index: 2; /* Ensure the navbar appears above the content */
-  margin: 0px;
+  margin-top: 210px;
 }
 
+#profile-header {
+  color: rgb(33, 29, 29);
+  padding: 2px 2px 2px 2px;
+  font-size: 20px;
+  margin: 0px 0px 0px 50px;
+}
 
-#top-header {
+h1, h3 {
+  margin: 2px;
+}
+
+#profile-list {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-  background-color: black;
-  border-bottom: 5px solid rgb(170, 1, 1);
-  box-shadow: 0px 5px 10px rgb(45, 44, 44);
-  align-items: center;
-  color: rgb(255, 251, 246);
-  padding: 10px;
+  align-items: flex-start;
+  padding: 20px;
+  border: 3px solid rgb(170, 1, 1);
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px gray;
+  background-color: white;
+  line-height: 40px;
+  font-size: 18px;
 }
 
-.contact {
-  border-left: 2px solid #fff;
-  padding-left: 45px;
-}
-
-#name {
-  margin: 5px;
-  font-size: 40px;
-}
-
-/* Add CSS for the portfolio list container */
+/* Portfolio */
 .portfolio-list {
   position: relative;
 }
@@ -135,16 +149,10 @@ header a:hover {
   margin: 5px;
 }
 
+
 a {
-  color: rgb(31, 136, 207);
-  margin-right: 3px;
+  margin-right: 5px;
 }
-
-a:hover {
-  color: rgb(0, 157, 255);
-}
-
-
 
 ol {
   margin: auto;
@@ -166,121 +174,6 @@ a:link {
   text-decoration: none;
 }
 
-main {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 20px;
-}
-
-#profile-container {
-  display: flex;
-  justify-content: space-evenly;
-  background-color: #ffe8e8;
-  padding-bottom: 70px;
-}
-
-#profile {
-  align-items: center;
-  justify-content: center;
-}
-
-.profile {
-  margin-top: 140px;
-}
-
-#profile img {
-  border-radius: 50%;
-  border: 5px solid rgb(135, 1, 1);
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
-  width: 100%;
-  margin-top: 180px;
-}
-
-#profile-header {
-  color: rgb(33, 29, 29);
-  padding: 2px 2px 2px 2px;
-  font-size: 20px;
-  margin: 0px 0px 0px 50px;
-}
-
-h1, h3 {
-  margin: 2px;
-}
-
-#profile-list {
-  padding: 20px;
-  border: 3px solid rgb(170, 1, 1);
-  border-radius: 5px;
-  box-shadow: 5px 5px 10px gray;
-  background-color: white;
-  line-height: 40px;
-  font-size: 18px;
-  display: flex; /* Enable flexbox for the profile list */
-  flex-direction: column; /* Stack list items vertically */
-  align-items: flex-start; /* Align list items to the top */
-}
-
-.container {
-  max-width: auto; /* Adjust the max-width as needed */
-  margin: 0 auto;
-  padding: 20px;
-}
-
-section {
-  margin-bottom: 20px; /* Add some space between each row */
-}
-
-.portfolio-row {
-  display: flex;
-  align-items: center;
-}
-
-.portfolio-left-column {
-  flex: 2; /* Take up 2/3 of the row width */
-  margin-right: -80px;
-}
-
-.portfolio-right-column {
-  flex: 1; /* Take up 1/3 of the row width */
-}
-
-.portfolio-left-column img {
-  max-width: auto; /* Ensure the image doesn't exceed its column width */
-}
-
-.portfolio-right-column h1 {
-  margin-top: 0; /* Remove default top margin for the heading */
-}
-
-.portfolio-right-column ul {
-  padding: 0;
-  margin: 0; /* Remove default margin for the ul element */
-  list-style-type: disc; /* Add bullet points to the list */
-  line-height: 2;
-}
-
-#weblink {
-  cursor: pointer; /* Change the cursor to a pointer on hover */
-  color: rgb(170, 1, 1); /* Set the initial color of the text (optional) */
-}
-
-#weblink:hover {
-  color: rgb(208, 128, 0); /* Set the highlight color to red on hover */
-}
-
-#bootcamp-practice,
-#password-generator,
-#weather-dashboard,
-#movie-reviews,
-#bookshare {
-  Padding: 20px;
-  background-color: rgb(224, 224, 224);
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  box-shadow: 5px 5px 15px;
-  margin: 70px 50px 50px 50px;
-  scroll-margin-top: 300px;
-}
 
 #bookshare {
   margin-bottom: 100px;
@@ -292,11 +185,39 @@ section {
 .bookshare  {
   position: static;
   border-right: 5px solid rgb(170, 1, 1);
-  width: 750px;
+  width: 300px;
   height: 200px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px#333;
+  margin: 20px;
 }
+
+.portfolio-row {
+  display: flex;
+  align-items: center;
+}
+
+.portfolio-row .portfolio-list {
+  display: none;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-100%, 0);
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.portfolio-row:hover .portfolio-list {
+  display: block;
+  transform: translate(0, 0);
+}
+
+.portfolio-row:hover .password-generator {
+  transform: scale(1.05); /* Adjust the scale as needed */
+}
+
+
 
    /* Footer styles */
 footer {
