--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ header {
   padding: 10px;
 }
 
-header .flex-container {
+.top-header {
   display: flex;
   justify-content: center;
   margin: 10px 0px 10px 0px;
@@ -37,18 +37,13 @@ header li {
   margin: 0 15px;
 }
 
-header a {
+.clicked {
   color: #fff;
   text-decoration: none;
 }
 
-header a:hover,
-header a:focus {
-  color: rgb(170, 1, 1);
-  filter: brightness(1.2);
-}
-
-header a.portfolio-link.clicked {
+.clicked:hover,
+.clicked:focus {
   color: rgb(170, 1, 1);
   filter: brightness(1.2);
 }
@@ -103,128 +98,16 @@ h1, h3 {
 }
 
 
-.portfolio-list {
-  position: relative;
-}
+/* Portfolio Items */
 
-/* Hide the portfolio titles by default */
-.portfolio-titles {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  margin-left: 10px;
-  background-color: white;
-  border: 1px solid #6d6d6d;
-  border-radius: 5px;
-  padding: 10px 15px;
-  width: auto;
-  z-index: 2;
-  white-space: nowrap;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: #333;
-  transition: opacity 0.3s, visibility 0s 0.3s; /* Add transitions for smooth visibility change */
-}
-
-/* Show the portfolio titles when hovering over .portfolio-list */
-.portfolio-list:hover .portfolio-titles {
-  visibility: visible;
-  opacity: 1;
-  transition-delay: 0s; /* Remove the delay on hover to show immediately */
-}
-
-/* Position the portfolio titles between "Profile" and "LinkedIn" */
-.portfolio-titles {
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-/* Position portfolio titles vertically */
-.portfolio-titles li {
-  padding: 5px; /* Add some spacing between portfolio items */
-}
-
-#portfolio {
-  margin: 5px;
-}
-
-
-a {
-  color: rgb(31, 136, 207);
-  margin-right: 3px;
-}
-
-a:hover {
-  color: rgb(0, 157, 255);
-}
-
-ol {
-  margin: auto;
-  padding: 0;
-}
-
-av {
-  margin: 0 auto;
-  width: fit-content;
-  text-align: center;
-  color: black;
-  position: absolute;
-  top: 120px;
-  left: 450px;
-}
-
-a:link {
-  color: solid rgb(0, 0, 0);
-  text-decoration: none;
-}
-
-
-#bookshare {
-  margin-bottom: 100px;
-}
-.bootcamp-practice,
-.password-generator,
-.weather-dashboard,
-.movie-reviews,
-.bookshare  {
+.password-generator {
   position: static;
   border-right: 5px solid rgb(170, 1, 1);
   width: 300px;
   height: 200px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px#333;
-  margin: 20px;
-}
-
-.portfolio {
-  /* Your other styles for the portfolio section */
-}
-
-.portfolio-row {
-  display: flex;
-  align-items: center;
-}
-
-
-.portfolio-row .portfolio-list {
-  display: none;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(-100%, 0);
-  transition: transform 0.3s, opacity 0.3s;
-}
-
-.portfolio-row:hover .portfolio-list {
-  display: block;
-  transform: translate(0, 0);
-}
-
-.portfolio-row:hover .password-generator {
-  transform: scale(1.05); /* Adjust the scale as needed */
+  margin: 40px;
 }
 
 
