--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,11 @@ header {
   display: flex;
   justify-content: center;
   margin: 10px 0px 10px 0px;
-  font-size: 25px;
+  font-size: 35px;
+}
+
+.nav-container {
+  justify-content: center;
 }
 
 header ul {
@@ -52,7 +56,7 @@ header li {
 #profile-container {
   display: flex;
   justify-content: space-evenly;
-  background-color: #ffe8e8;
+  background-color: #ffefef;
   padding-bottom: 70px;
 }
 
@@ -104,8 +108,9 @@ h1, h3 {
   flex-wrap: wrap;
   justify-content: space-around;
   width: auto;
+  height: 550px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 25px 20px 20px 20px;
 }
 
 .password-generator {
@@ -118,7 +123,6 @@ h1, h3 {
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
-margin: 20px
 }
 
 .password-list {
@@ -181,14 +185,13 @@ margin: 20px
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
-margin: 20px;
 }
 
 
 /* Style for the contact form */
 .contact {
   background-color: #f2f2f2;
-  padding: 30px 500px 30px 500px;
+  padding: 60px 500px 30px 500px;
 }
 
 
