Finished up with portfolio components

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
+  overflow:hidden;
 }
 
 /* Header */
@@ -110,6 +111,24 @@ h1, h3 {
   padding: 20px 20px 20px 20px;
 }
 
+.card-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly; /* Align items horizontally to center */
+}
+
+.card-links h4 {
+  margin: 0 10px; /* Add spacing around the text and icon */
+}
+
+.card-links a {
+  color: black; /* Change the color of the GitHub logo to black */
+}
+
+.card-links a:hover {
+  color: rgb(170, 1, 1); /* Change the color to red on hover */
+}
+
 .password-generator {
   display: flex;
   align-items: center;
@@ -120,10 +139,11 @@ h1, h3 {
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .password-list {
-  font-size: medium;
+  font-size: 14px;
   text-align: left;
   padding-left: 30px;
 }
@@ -171,7 +191,8 @@ h1, h3 {
 .rotate-card-back {
   display: flex;
   align-items: center;
-  background-color: white;
+  background-color: rgb(255, 236, 236);
+  border: 1px solid #000000;
   transform: rotateY(180deg); /* Rotate on central vertical axis */
   justify-content: center;
   text-align: center;
@@ -311,7 +332,7 @@ button[type="submit"] {
 iframe {
   width: 65%;
   height: 1375px;
-  border: 2px solid black;
+  border: 2px solid rgb(170, 1, 1);
   margin: auto;
   align-items: center;
 }
