--- a/src/styles.css
+++ b/src/styles.css
@@ -11,12 +11,14 @@ header {
   width: 100%;
   position: fixed;
   z-index: 1;
-  background-color: black;
   border-bottom: 5px solid rgb(170, 1, 1);
   box-shadow: 0px 5px 10px rgb(45, 44, 44);
   align-items: center;
-  color: rgb(255, 251, 246);
+  color: rgb(231, 231, 231);
+  text-shadow: 4px 4px 4px rgba(28, 10, 10, 0.5);
   padding: 10px;
+  background-image: url('./assets/header-background.png');
+  background-size: cover;
 }
 
 #top-header {
@@ -26,29 +28,57 @@ header {
   font-size: 45px;
 }
 
+
 #nav-container {
   display: flex;
-  justify-content: center;
   list-style: none;
-  margin: 0; /* Reset margin */
-  padding: 0; /* Reset padding */
-  margin-bottom: 5px;
+  padding: 0;
+  margin: 0;
 }
 
 #nav-container li {
-  margin: 0 10px; /* Add margin only between list items */
+  margin-right: 20px; /* Adjust the spacing between menu items */
+  position: relative;
 }
 
-.clicked {
-  color: #fff;
+#nav-container li:first-child {
+  margin-left: 0; /* Remove margin from the first menu item */
+}
+
+#nav-container li:last-child {
+  margin-right: 0; /* Remove margin from the last menu item */
+}
+
+#nav-container li a {
+  display: inline-block;
+  padding: 5px 30px;
   text-decoration: none;
+  color: #dddddd; /* Set the text color */
+  position: relative; /* Add relative positioning to the menu items */
 }
 
-.clicked:hover,
-.clicked:focus {
-  color: rgb(170, 1, 1);
-  filter: brightness(1.2);
+#nav-container li a:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0px; /* Adjust the position of the vertical line */
+  transform: translateY(-50%);
+  width: 3px;
+  height: 70%; /* Adjust the height of the line */
+  background-color: #ececec; /* Set the color of the vertical line */
 }
+
+#nav-container li:first-child a:before {
+  display: none; /* Hide the vertical line for the first menu item */
+}
+
+#nav-container li a:hover,
+#nav-container li a:focus {
+  color: rgb(170, 1, 1); /* Set the red color on hover and focus */
+}
+
+
+
 
 /* Profile */
 #profile-container {
@@ -122,11 +152,13 @@ h1, h3 {
 }
 
 .card-links a {
-  color: black; /* Change the color of the GitHub logo to black */
+  color: rgb(170, 1, 1) /* Change the color of the GitHub logo to black */
 }
 
 .card-links a:hover {
-  color: rgb(170, 1, 1); /* Change the color to red on hover */
+  color: rgb(0, 0, 0); /* Change the color to red on hover */
+  transform: scale(1.2);
+  transition: transform 0.3s ease-in-out;
 }
 
 .password-generator {
@@ -146,6 +178,9 @@ h1, h3 {
   font-size: 14px;
   text-align: left;
   padding-left: 30px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid black;
+  margin-bottom: 5px;
 }
 
 .rotate-container {
@@ -203,8 +238,6 @@ h1, h3 {
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
-  padding: 5px
-
 }
 
 
@@ -214,8 +247,16 @@ h1, h3 {
   flex-direction: column;
   flex-wrap: wrap;
   background-color: #f2f2f2;
-  padding: 60px 500px 30px 500px;
-  scroll-margin-top: 120px;
+  padding: 25px;
+  scroll-margin-top: 150px;
+  border: 2px solid  rgb(170, 1, 1);
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px #333;
+  margin: 60px 400px 30px 400px;
+}
+
+#contactMe {
+  border-bottom: 1px solid gray;
 }
 
 .container h1 {
@@ -236,7 +277,7 @@ h1, h3 {
 
 .form-group input,
 .form-group textarea {
-  width: 100%;
+  width: auto;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -286,7 +327,7 @@ button[type="submit"] {
 .proficiencies {
   background-color: #f2f2f2;
   padding: 40px 0;
-  scroll-margin-top: 120px;
+  scroll-margin-top: 100px;
 }
 
 .proficiencies .container {
@@ -344,9 +385,11 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: black;
-  padding: 10px;
   border-top: 5px solid rgb(170, 1, 1);
+  box-shadow: 5px 5px 10px 5px rgb(47, 32, 18);
+  padding: 10px;
+  background-image: url('./assets/header-background.png');
+  background-size: cover;
 }
 
 .footer-icons {
@@ -355,12 +398,14 @@ footer {
 }
 
 .footer-icons a {
-  margin: 10px 30px 10px 30px;
+  margin: 10px 30px;
   color: rgb(255, 251, 246); /* Set the default color of the icons */
-  transition: color 0.2s ease; /* Add a smooth transition effect */
+  transition: color 0.2s ease, box-shadow 0.2s ease; /* Add transitions for color and box-shadow */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); /* Add a shadow to the icons */
 }
 
 .footer-icons a:hover {
   color: rgb(170, 1, 1); /* Set the color of the icons on hover */
   filter: brightness(1.2); /* Add brightness to make it brighter on hover */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); /* Add a shadow to the icons */
 }
