Able to get selected menu items to remain as the selected color

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,10 +68,12 @@ header {
 }
 
 #nav-list li a:hover,
-#nav-list li:focus-within a {
+#nav-list li:active a,
+#nav-list li a.active {
   color: rgb(170, 1, 1);
   transition: color 0.2s ease, box-shadow 0.2s ease;
 }
+
 
 
 
