Further changes to ProjectData.js, and content.js in order to better incorporate React framework

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,103 +1,113 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
-  overflow:hidden;
 }
-
 
 /* Header */
 header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   position: fixed;
   z-index: 1;
   border-bottom: 5px solid rgb(170, 1, 1);
   box-shadow: 0px 5px 10px rgb(45, 44, 44);
-  align-items: center;
-  color: rgb(231, 231, 231);
+  color: rgb(255, 255, 255);
   text-shadow: 4px 4px 4px rgba(28, 10, 10, 0.5);
-  padding: 10px;
+  padding: 10px 0px 10px 0px;
   background-image: url('./assets/header-background.png');
   background-size: cover;
 }
 
-#top-header {
+#header-content {
   display: flex;
-  justify-content: center;
-  margin: 10px 0;
-  font-size: 45px;
+  justify-content: space-around;
+  width: 100%;
 }
 
+#name {
+  font-size: 20px;
+  padding-left: 20px;
+}
 
-
-#nav-container {
+#nav {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 #nav-list {
   list-style: none;
   padding: 0;
-  margin: 0;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0;
+  text-align: center;
 }
 
-#nav-list li {
-  font-size: 20px;
-  position: relative;
+#nav li {
+  font-size: 18px;
   font-weight: bold;
+  margin-left: 15px;
 }
 
-#nav-list li a {
-  display: inline-block;
-  padding: 5px 30px;
+#nav li a {
   text-decoration: none;
-  color: #dddddd;
-  position: relative;
+  color: #ffffff;
 }
 
-#nav-list li::after {
-  content: " | ";
-  color: #dddddd;
-  font-weight: bold;
-}
-
-#nav-list li:last-child::after {
-  content: none;
-}
-
-#nav-list li a:hover,
-#nav-list li:active a,
-#nav-list li a.active {
+#nav li a:hover,
+#nav li a.active {
   color: rgb(170, 1, 1);
   transition: color 0.2s ease, box-shadow 0.2s ease;
+  text-shadow: 1px 1px 7px rgba(255, 255, 255, 0.5);
 }
 
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  #header-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #nav {
+    margin-top: 10px;
+    order: 1;
+    width: 100%;
+  }
+}
 
 /* Profile */
 #profile-container {
   display: flex;
-  justify-content: space-evenly;
-  background-color: #ffefef;
-  padding-bottom: 70px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: white;
+  padding: 10px 20px 60px 40px;
+  width: auto;
 }
 
-#profile {
-  align-items: center;
-  justify-content: center;
+.personal-profile {
+  margin-top: 120px;
 }
 
-.profile {
-  margin-top: 160px;
-}
-
-#profile img {
+.profile img {
   border-radius: 50%;
   border: 5px solid rgb(135, 1, 1);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
-  width: 100%;
-  margin-top: 190px;
+  width: 120%;
+  margin-top: 120px;
+  transition: transform 0.5s;
+}
+
+.flip-trigger:hover ~ .personal-profile #profile img {
+  cursor: pointer;
+  transform: rotateY(180deg);
+}
+
+.flipped {
+  transform: rotateY(180deg);
 }
 
 #profile-header {
@@ -119,44 +129,54 @@ h1, h3 {
   border: 3px solid rgb(170, 1, 1);
   border-radius: 5px;
   box-shadow: 5px 5px 10px gray;
-  background-color: white;
+  background-color: rgb(255, 244, 244);
   line-height: 40px;
   font-size: 18px;
 }
 
-
-/* Portfolio Items */
-#container {
+/* Portfolio */
+#portfolio-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  scroll-margin-top: 120px;
+  scroll-margin-top: 80px;
   width: auto;
-  height: 560px;
+  height: 100%;
   padding: 20px 20px 20px 20px;
 }
 
-.orange-icon {
-  color: rgb(255, 77, 0);
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: auto;
+  padding: 15px;
+  margin: 0px;
 }
 
 .card-links {
   display: flex;
   align-items: center;
-  justify-content: space-evenly; /* Align items horizontally to center */
-}
-
-.card-links h4 {
-  margin: 0 10px; /* Add spacing around the text and icon */
+  justify-content: space-evenly;
 }
 
 .card-links a {
-  color: rgb(170, 1, 1) /* Change the color of the GitHub logo to black */
+  color: rgb(170, 1, 1)
 }
 
 .card-links a:hover {
-  color: rgb(0, 0, 0); /* Change the color to red on hover */
-  transform: scale(1.2);
+  color: rgb(0, 0, 0);
+  transform: scale(1.5);
+  transition: transform 0.3s ease-in-out;
+}
+
+.card-links .link-icon {
+  font-size: 1.5rem;
+}
+
+.card-links .link-icon:hover {
+  color: rgb(0, 0, 0);
+  transform: scale(1.3);
   transition: transform 0.3s ease-in-out;
 }
 
@@ -165,7 +185,7 @@ h1, h3 {
   align-items: center;
   justify-content: center;
   text-align: center;
-  position: relative; /* Change to relative */
+  position: relative;
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -200,11 +220,11 @@ h1, h3 {
   height: 100%;
   transform-style: preserve-3d;
   transition: transform 0.5s;
-  transform-origin: center center; /* Set the transformation origin to center */
+  transform-origin: center center;
 }
 
 .rotate-container:hover .rotate-card-inner {
-  transform: rotateY(180deg); /* Rotate on central vertical axis */
+  transform: rotateY(180deg); 
 }
 
 .rotate-card-front,
@@ -219,44 +239,72 @@ h1, h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: rotateY(0deg); /* Initial rotation */
+  transform: rotateY(0deg);
 }
 
 .rotate-card-back {
   display: flex;
   align-items: center;
-  background-color: rgb(255, 236, 236);
-  border: 1px solid #000000;
-  transform: rotateY(180deg); /* Rotate on central vertical axis */
   justify-content: center;
   text-align: center;
-  position: relative; /* Change to absolute */
-  top: 0; /* Align to the top */
-  left: 0; /* Align to the left */
+  position: relative;
   width: 100%;
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 236, 236);
+  transform: rotateY(180deg);
 }
 
-
-/* Style for the contact form */
-.contact {
+/* Tap Me Note */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
+  align-items: top;
+  justify-content: flex-start;
+  font-size: large;
+  font-weight: bold;
+}
+
+.overlay p {
+  margin: 10px;
+  height: 23px;
+  width: 80px;
+  text-align: center;
+  background-color: crimson;
+  border-radius: 5px;
+  border: 1px solid yellow;
+}
+
+/* Contact Card */
+#contact {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   background-color: #f2f2f2;
   padding: 25px;
-  scroll-margin-top: 150px;
+  scroll-margin-top: 130px;
   border: 2px solid  rgb(170, 1, 1);
   border-radius: 5px;
   box-shadow: 2px 2px 10px #333;
-  margin: 60px 400px 30px 400px;
-  align-items: left; /* Vertically align the form content */
+  margin: 50px 50px 50px 50px;
+  width: 60%;
+}
+#contact-form {
+  width: 100%;
 }
 
 #contactMe {
   border-bottom: 1px solid gray;
+}
+
+.orange-icon {
+  color: rgb(255, 77, 0);
 }
 
 .container h1 {
@@ -302,14 +350,12 @@ button[type="submit"]:hover {
   background-color:  black;
 }
 
-/* Align form to the left with left margin */
 .form-group input,
 .form-group textarea,
 button[type="submit"] {
   margin-left: 15px;
 }
 
-/* Add spacing between form components */
 .form-group {
   padding-top: 15px;
 }
@@ -321,47 +367,59 @@ button[type="submit"] {
   margin-top: 5px;
 }
 
-/* Style for the Thank you message */
 .thank-you-message {
   background-color: #000000;
   color: white;
   padding: 9px;
   text-align: center;
   border-radius: 5px;
-  display: inline-block; /* Display the message inline */
-  vertical-align: middle; /* Align the message vertically */
-  margin-left: 10px; /* Add some spacing between the button and the message */
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
 }
-
-
-
-
 
 /* Profiencies */
-.proficiencies {
-  background-color: #f2f2f2;
+#proficiencies {
+  display: flex;
+  flex-direction: column;
   padding: 40px 0;
-  scroll-margin-top: 135px;
+  scroll-margin-top: 80px;
+  justify-content: center;
+  align-items: center;
 }
 
-.proficiencies .container {
+#profTitle {
+  position: relative;
+}
+
+#profTitle::before {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: -20%;
+  width: 140%;
+  height: 2px;
+  background-color: #000000;
+}
+
+#proficiencies .container {
   width: auto;
   margin: 0 auto;
   text-align: center;
   padding-bottom: 60px;
 }
 
-.proficiencies h1 {
+#proficiencies h1 {
   font-size: 40px;
   margin-bottom: 20px;
 }
 
-.proficiencies p {
+#proficiencies p {
   font-size: 18px;
   margin-bottom: 30px;
 }
 
-.proficiencies a {
+#proficiencies a {
   display: inline-block;
   background-color: rgb(170, 1, 1);
   color: #fff;
@@ -373,7 +431,7 @@ button[type="submit"] {
   margin: 25px;
 }
 
-.proficiency-box {
+#proficiency-box {
   background-color: #f2f2f2;
   padding: 20px;
   border: 2px solid rgb(170, 1, 1);
@@ -386,7 +444,7 @@ button[type="submit"] {
   margin-bottom: 10px;
 }
 
-.proficiency-box ul {
+#proficiency-box ul {
   list-style: none;
   padding: 0;
   display: flex;
@@ -395,38 +453,51 @@ button[type="submit"] {
   padding-left: 0;
 }
 
-.proficiency-box li {
+#proficiency-box li {
   margin-right: 20px;
   margin-bottom: 5px;
 }
 
-.proficiency-box li::after {
+#proficiency-box li::after {
   content: " | ";
   color: rgb(170, 1, 1);
   margin-left: 5px;
 }
 
-.proficiency-box li:last-child::after {
+#proficiency-box li:last-child::after {
   content: none;
 }
 
-
 /* Resume */
-.resume-container {
+#resume {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 110%;
 }
 
 iframe {
-  width: 65%;
+  width: 68%;
   height: 1375px;
-  border: 2px solid rgb(170, 1, 1);
   margin: auto;
+}
+
+#downloadBtn {
+  background-color: rgb(170, 1, 1);
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 30px;
   align-items: center;
 }
 
+#downloadBtn:hover {
+  background-color:  black;
+}
 
 /* Footer */
 footer {
@@ -436,7 +507,7 @@ footer {
   width: 100%;
   border-top: 5px solid rgb(170, 1, 1);
   box-shadow: 5px 5px 10px 5px rgb(47, 32, 18);
-  padding: 10px;
+  padding: 5px;
   background-image: url('./assets/header-background.png');
   background-size: cover;
 }
@@ -448,13 +519,13 @@ footer {
 
 .footer-icons a {
   margin: 10px 30px;
-  color: rgb(255, 251, 246); /* Set the default color of the icons */
-  transition: color 0.2s ease, box-shadow 0.2s ease; /* Add transitions for color and box-shadow */
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); /* Add a shadow to the icons */
+  color: rgb(255, 251, 246);
+  transition: color 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
 }
 
 .footer-icons a:hover {
-  color: rgb(170, 1, 1); /* Set the color of the icons on hover */
-  filter: brightness(1.2); /* Add brightness to make it brighter on hover */
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); /* Add a shadow to the icons */
+  color: rgb(170, 1, 1);
+  filter: brightness(1.2);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
 }
