--- a/src/styles.css
+++ b/src/styles.css
@@ -22,18 +22,22 @@ header {
 
 #header-content {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-between; /* Adjust this to control the space between header and navbar */
+  align-items: center;
   width: 100%;
 }
 
 #name {
-  font-size: 20px;
+  font-size: 25px;
   padding-left: 20px;
 }
 
 #nav {
   display: flex;
   flex-wrap: wrap;
+  order: 1;
+  width: 100%;
 }
 
 #nav-list {
@@ -70,12 +74,6 @@ header {
     flex-direction: column;
     align-items: flex-start;
   }
-
-  #nav {
-    margin-top: 10px;
-    order: 1;
-    width: 100%;
-  }
 }
 
 /* Profile */
@@ -84,12 +82,13 @@ header {
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: white;
-  padding: 10px 20px 60px 40px;
+  padding: 10px 20px 60px 20px;
   width: auto;
+  scroll-margin-top: 60px;
 }
 
 .personal-profile {
-  margin-top: 120px;
+  margin-top: 145px;
 }
 
 .profile img {
@@ -97,17 +96,8 @@ header {
   border: 5px solid rgb(135, 1, 1);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
   width: 120%;
-  margin-top: 120px;
+  margin-top: 145px;
   transition: transform 0.5s;
-}
-
-.flip-trigger:hover ~ .personal-profile #profile img {
-  cursor: pointer;
-  transform: rotateY(180deg);
-}
-
-.flipped {
-  transform: rotateY(180deg);
 }
 
 #profile-header {
@@ -134,16 +124,17 @@ h1, h3 {
   font-size: 18px;
 }
 
-/* Portfolio */
 #portfolio-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  scroll-margin-top: 80px;
+  justify-content: center; /* Center items horizontally within the row */
+  align-items: flex-start; /* Align items at the top of the container */
+  scroll-margin-top: 85px;
   width: auto;
   height: 100%;
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 50px 20px;
 }
+
 
 .portfolio {
   display: flex;
@@ -180,7 +171,7 @@ h1, h3 {
   transition: transform 0.3s ease-in-out;
 }
 
-.password-generator {
+#password-generator {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -204,6 +195,7 @@ h1, h3 {
 
 .rotate-container {
   perspective: 1000px;
+  padding: 15px;
 }
 
 .rotate-card {
@@ -237,7 +229,6 @@ h1, h3 {
 
 .rotate-card-front {
   display: flex;
-  align-items: center;
   justify-content: center;
   transform: rotateY(0deg);
 }
@@ -282,17 +273,27 @@ h1, h3 {
 }
 
 /* Contact Card */
-#contact {
+#contact-container {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  scroll-margin-top: 120px;
+  width: auto;
+  height: 100%;
+  padding: 20px 20px 50px 20px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   background-color: #f2f2f2;
   padding: 25px;
-  scroll-margin-top: 130px;
   border: 2px solid  rgb(170, 1, 1);
   border-radius: 5px;
   box-shadow: 2px 2px 10px #333;
-  margin: 50px 50px 50px 50px;
+  margin: auto;
   width: 60%;
 }
 #contact-form {
@@ -379,11 +380,22 @@ button[type="submit"] {
 }
 
 /* Profiencies */
-#proficiencies {
+#proficiencies-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center items horizontally within the row */
+  align-items: flex-start; /* Align items at the top of the container */
+  scroll-margin-top: 80px;
+  width: auto;
+  height: 100%;
+  padding: 20px 20px 20px 20px;
+  text-align: center;
+
+}
+.proficiencies {
   display: flex;
   flex-direction: column;
-  padding: 40px 0;
-  scroll-margin-top: 80px;
+  padding: 40px 0px 0px 0px;
   justify-content: center;
   align-items: center;
 }
@@ -400,13 +412,6 @@ button[type="submit"] {
   width: 140%;
   height: 2px;
   background-color: #000000;
-}
-
-#proficiencies .container {
-  width: auto;
-  margin: 0 auto;
-  text-align: center;
-  padding-bottom: 60px;
 }
 
 #proficiencies h1 {
@@ -474,7 +479,7 @@ button[type="submit"] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 110%;
+  width: auto;
 }
 
 iframe {
