--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,9 @@ body {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  top: 0;
   justify-content: space-around;
   padding: 10px 10px 10px 10px;
-  width: auto;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -73,25 +73,41 @@ body {
 #profile-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between; /* Evenly space items horizontally */
+  align-items: center; /* Center items vertically */
   background-color: white;
   padding: 10px 20px 60px 20px;
-  width: auto;
-  scroll-margin-top: 60px;
+  margin-top: 130px;
+  scroll-margin-top: 130px;
 }
 
-.personal-profile {
-  margin-top: 145px;
+.profile {
+  display: flex; /* Display items horizontally */
+  align-items: center; /* Center vertically */
+  justify-content: space-between; /* Space items evenly */
+  margin: 0 auto; /* Center the profile items */
 }
 
-.profile img {
+.profile-picture {
   border-radius: 50%;
   border: 5px solid rgb(135, 1, 1);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
-  width: 120%;
-  margin-top: 145px;
+  width: 60%;
   transition: transform 0.5s;
 }
+
+.personal-profile {
+  padding: 20px;
+  border: 3px solid rgb(170, 1, 1);
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px gray;
+  background-color: rgb(255, 244, 244);
+  line-height: 35px;
+  font-size: 18px;
+  width: 100%;
+}
+
+
 
 #profile-header {
   color: rgb(33, 29, 29);
