--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,7 @@ body {
   align-items: center;
   top: 0;
   justify-content: space-around;
-  padding: 10px 10px 10px 10px;
-  width: 100%;
+  width: auto;
   position: fixed;
   z-index: 1;
   border-bottom: 5px solid rgb(170, 1, 1);
@@ -73,30 +72,39 @@ body {
 #profile-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; /* Evenly space items horizontally */
+  flex-direction: row;
+  justify-content:space-around; /* Evenly space items horizontally */
   align-items: center; /* Center items vertically */
   background-color: white;
   padding: 10px 20px 60px 20px;
-  margin-top: 130px;
+  margin-top: 170px;
   scroll-margin-top: 130px;
-}
-
-.profile {
-  display: flex; /* Display items horizontally */
-  align-items: center; /* Center vertically */
-  justify-content: space-between; /* Space items evenly */
-  margin: 0 auto; /* Center the profile items */
+  width: auto;
+  height: auto;
 }
 
 .profile-picture {
+  display: flex; /* Display items horizontally */
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center; /* Center vertically */
+  justify-content: space-between; /* Space items evenly */
+  margin: 0px; /* Center the profile items */
+}
+
+#picture {
   border-radius: 50%;
   border: 5px solid rgb(135, 1, 1);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
-  width: 60%;
+  width: 100%;
   transition: transform 0.5s;
 }
 
-.personal-profile {
+.profile-personal {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-start;
   padding: 20px;
   border: 3px solid rgb(170, 1, 1);
   border-radius: 5px;
@@ -104,15 +112,12 @@ body {
   background-color: rgb(255, 244, 244);
   line-height: 35px;
   font-size: 18px;
-  width: 100%;
 }
-
-
 
 #profile-header {
   color: rgb(33, 29, 29);
   padding: 2px 2px 2px 2px;
-  font-size: 20px;
+  font-size: 30px;
   margin: 0px 0px 0px 50px;
 }
 
@@ -120,18 +125,6 @@ h1, h3 {
   margin: 2px;
 }
 
-#profile-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-  border: 3px solid rgb(170, 1, 1);
-  border-radius: 5px;
-  box-shadow: 5px 5px 10px gray;
-  background-color: rgb(255, 244, 244);
-  line-height: 40px;
-  font-size: 18px;
-}
 
 /* Portfolio */
 #portfolio-container {
@@ -141,7 +134,7 @@ h1, h3 {
   align-items: flex-start; /* Align items at the top of the container */
   scroll-margin-top: 85px;
   width: auto;
-  height: 100%;
+  height: auto;
   padding: 20px 20px 50px 20px;
 }
 
@@ -302,11 +295,11 @@ h1, h3 {
   border: 2px solid  rgb(170, 1, 1);
   border-radius: 5px;
   box-shadow: 2px 2px 10px #333;
-  margin: auto;
-
+  width: 60%;
 }
+
 #contact-form {
-  width: 100%;
+  width: auto;
 }
 
 #contactMe {
@@ -390,7 +383,7 @@ button[type="submit"]:hover {
   align-items: flex-start; /* Align items at the top of the container */
   scroll-margin-top: 80px;
   width: auto;
-  height: 100%;
+  height: auto;
   padding: 20px 20px 20px 20px;
   text-align: center;
 
