--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
+  width:100%
 }
 
 /* Header */
@@ -12,7 +13,6 @@ body {
   top: 0;
   justify-content: space-around;
   width: 100%;
-  height: auto;
   position: fixed;
   z-index: 1;
   border-bottom: 5px solid rgb(170, 1, 1);
@@ -143,7 +143,7 @@ h1, h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: auto;
+  width: 100%;
   padding: 15px;
   margin: 0px;
 }
@@ -282,7 +282,7 @@ h1, h3 {
   justify-content: center;
   align-items: flex-start;
   scroll-margin-top: 120px;
-  width: auto;
+  width: 100%;
   height: 100%;
   padding: 20px 20px 50px 20px;
 }
@@ -387,8 +387,8 @@ button[type="submit"]:hover {
   height: auto;
   padding: 20px 20px 20px 20px;
   text-align: center;
-
 }
+
 .proficiencies {
   display: flex;
   flex-direction: column;
@@ -471,12 +471,23 @@ button[type="submit"]:hover {
 }
 
 /* Resume */
-#resume {
+#resume-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center items horizontally within the row */
+  align-items: flex-start; /* Align items at the top of the container */
+  scroll-margin-top: 80px;
+  width: 100%;
+  padding: 20px 20px 20px 20px;
+  text-align: center;
+}
+
+.resume {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: auto;
+  width: 100%;
 }
 
 iframe {
@@ -534,18 +545,35 @@ footer {
 
 @media (max-width: 768px) {
   #profile-container {
-    margin-top: 180px;
-  }
-}
-
-@media (max-width: 768px) {
-  #contact-container {
-    scroll-margin-top: 140px;
+    margin-top: 250px;
+    width: 100%;
   }
 }
 
 @media (max-width: 768px) {
   #portfolio-container {
-    scroll-margin-top: 45px;
+    scroll-margin-top: 140px;
+        width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  #contact-container {
+    scroll-margin-top: 165px;
+        width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  #proficiencies-container {
+    scroll-margin-top: 130px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  #resume-container {
+    scroll-margin-top: 150px;
+    width: 100%;
   }
 }
