--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
-  width:100%
 }
 
 /* Header */
@@ -80,7 +79,7 @@ body {
   padding: 10px 20px 60px 20px;
   margin-top: 170px;
   scroll-margin-top: 130px;
-  width: 100%;
+  width: auto;
   height: auto;
 }
 
@@ -88,8 +87,6 @@ body {
   display: flex; /* Display items horizontally */
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center; /* Center vertically */
-  justify-content: space-between; /* Space items evenly */
   margin: 0px; /* Center the profile items */
 }
 
@@ -97,7 +94,7 @@ body {
   border-radius: 50%;
   border: 5px solid rgb(135, 1, 1);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
-  width: 100%;
+  width: auto;
   transition: transform 0.5s;
 }
 
@@ -134,7 +131,7 @@ h1, h3 {
   justify-content: center; /* Center items horizontally within the row */
   align-items: flex-start; /* Align items at the top of the container */
   scroll-margin-top: 85px;
-  width: 100%;
+  width: auto;
   height: auto;
   padding: 20px 20px 50px 20px;
 }
@@ -282,7 +279,7 @@ h1, h3 {
   justify-content: center;
   align-items: flex-start;
   scroll-margin-top: 120px;
-  width: 100%;
+  width: auto;
   height: 100%;
   padding: 20px 20px 50px 20px;
 }
@@ -383,7 +380,7 @@ button[type="submit"]:hover {
   justify-content: center; /* Center items horizontally within the row */
   align-items: flex-start; /* Align items at the top of the container */
   scroll-margin-top: 80px;
-  width: 100%;
+  width: auto;
   height: auto;
   padding: 20px 20px 20px 20px;
   text-align: center;
@@ -477,7 +474,7 @@ button[type="submit"]:hover {
   justify-content: center; /* Center items horizontally within the row */
   align-items: flex-start; /* Align items at the top of the container */
   scroll-margin-top: 80px;
-  width: 100%;
+  width: auto;
   padding: 20px 20px 20px 20px;
   text-align: center;
 }
@@ -513,7 +510,7 @@ iframe {
 }
 
 /* Footer */
-footer {
+#footer-container {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -545,35 +542,30 @@ footer {
 
 @media (max-width: 768px) {
   #profile-container {
-    margin-top: 250px;
-    width: 100%;
+    margin-top: 280px;
   }
 }
 
 @media (max-width: 768px) {
   #portfolio-container {
     scroll-margin-top: 140px;
-        width: 100%;
   }
 }
 
 @media (max-width: 768px) {
   #contact-container {
     scroll-margin-top: 165px;
-        width: 100%;
   }
 }
 
 @media (max-width: 768px) {
   #proficiencies-container {
     scroll-margin-top: 130px;
-    width: 100%;
   }
 }
 
 @media (max-width: 768px) {
   #resume-container {
     scroll-margin-top: 150px;
-    width: 100%;
   }
 }
