--- a/src/styles.css
+++ b/src/styles.css
@@ -67,6 +67,23 @@ body {
   text-shadow: 1px 1px 7px rgba(255, 255, 255, 0.5);
 }
 
+/* Add this CSS to your existing styles.css or equivalent stylesheet */
+#popup {
+  position: absolute;
+  background-color: white;
+  border: 2px solid rgb(170, 1, 1);
+  padding: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  z-index: 2; /* Make sure popup is above other elements */
+  color: #000000;
+  font-weight: bold;
+}
+
+#popup p {
+  margin: 0;
+}
+
 
 /* Profile */
 #profile-container {
